--- a/create_tabs/Food-dist/package.json
+++ b/create_tabs/Food-dist/package.json
@@ -1,7 +1,6 @@
 {
   "name": "food_page",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,5 +9,174 @@
   "license": "ISC",
   "devDependencies": {
     "json-server": "^0.17.0"
-  }
+  },
+  "dependencies": {
+    "body-parser": "^1.20.1",
+    "accepts": "^1.3.8",
+    "ansi-regex": "^5.0.1",
+    "ansi-styles": "^4.3.0",
+    "array-flatten": "^1.1.1",
+    "boxen": "^5.1.2",
+    "bytes": "^3.1.2",
+    "ansi-align": "^3.0.1",
+    "cacheable-request": "^6.1.0",
+    "basic-auth": "^2.0.1",
+    "call-bind": "^1.0.2",
+    "ci-info": "^2.0.0",
+    "chalk": "^4.1.2",
+    "camelcase": "^6.3.0",
+    "cliui": "^8.0.1",
+    "color-name": "^1.1.4",
+    "cli-boxes": "^2.2.1",
+    "compressible": "^2.0.18",
+    "clone-response": "^1.0.3",
+    "connect-pause": "^0.1.1",
+    "color-convert": "^2.0.1",
+    "compression": "^1.7.4",
+    "configstore": "^5.0.1",
+    "cookie-signature": "^1.0.6",
+    "content-disposition": "^0.5.4",
+    "content-type": "^1.0.4",
+    "cors": "^2.8.5",
+    "crypto-random-string": "^2.0.0",
+    "debug": "^2.6.9",
+    "deep-extend": "^0.6.0",
+    "defer-to-connect": "^1.1.3",
+    "decompress-response": "^3.3.0",
+    "cookie": "^0.5.0",
+    "depd": "^2.0.0",
+    "destroy": "^1.2.0",
+    "dot-prop": "^5.3.0",
+    "ee-first": "^1.1.1",
+    "duplexer3": "^0.1.5",
+    "end-of-stream": "^1.4.4",
+    "encodeurl": "^1.0.2",
+    "emoji-regex": "^8.0.0",
+    "escalade": "^3.1.1",
+    "errorhandler": "^1.5.1",
+    "escape-goat": "^2.1.1",
+    "escape-html": "^1.0.3",
+    "express-urlrewrite": "^1.4.0",
+    "etag": "^1.8.1",
+    "express": "^4.18.1",
+    "finalhandler": "^1.2.0",
+    "forwarded": "^0.2.0",
+    "fresh": "^0.5.2",
+    "get-caller-file": "^2.0.5",
+    "get-stream": "^4.1.0",
+    "function-bind": "^1.1.1",
+    "get-intrinsic": "^1.1.3",
+    "graceful-fs": "^4.2.10",
+    "global-dirs": "^3.0.0",
+    "has": "^1.0.3",
+    "has-symbols": "^1.0.3",
+    "has-yarn": "^2.1.0",
+    "has-flag": "^4.0.0",
+    "http-cache-semantics": "^4.1.0",
+    "http-errors": "^2.0.0",
+    "iconv-lite": "^0.4.24",
+    "got": "^9.6.0",
+    "inherits": "^2.0.4",
+    "import-lazy": "^2.1.0",
+    "imurmurhash": "^0.1.4",
+    "ipaddr.js": "^1.9.1",
+    "is-fullwidth-code-point": "^3.0.0",
+    "is-ci": "^2.0.0",
+    "ini": "^2.0.0",
+    "is-npm": "^5.0.0",
+    "is-installed-globally": "^0.4.0",
+    "is-obj": "^2.0.0",
+    "is-path-inside": "^3.0.3",
+    "is-yarn-global": "^0.3.0",
+    "is-promise": "^2.2.2",
+    "is-typedarray": "^1.0.0",
+    "isarray": "^0.0.1",
+    "jju": "^1.4.0",
+    "json-buffer": "^3.0.0",
+    "keyv": "^3.1.0",
+    "json-parse-helpfulerror": "^1.0.3",
+    "lodash-id": "^0.14.1",
+    "latest-version": "^5.1.0",
+    "lodash": "^4.17.21",
+    "lowdb": "^1.0.0",
+    "lowercase-keys": "^1.0.1",
+    "make-dir": "^3.1.0",
+    "lru-cache": "^6.0.0",
+    "media-typer": "^0.3.0",
+    "methods": "^1.1.2",
+    "method-override": "^3.0.0",
+    "merge-descriptors": "^1.0.1",
+    "mime-db": "^1.52.0",
+    "mime": "^1.6.0",
+    "mime-types": "^2.1.35",
+    "morgan": "^1.10.0",
+    "mimic-response": "^1.0.1",
+    "nanoid": "^3.3.4",
+    "minimist": "^1.2.6",
+    "normalize-url": "^4.5.1",
+    "object-assign": "^4.1.1",
+    "ms": "^2.0.0",
+    "negotiator": "^0.6.3",
+    "object-inspect": "^1.12.2",
+    "on-headers": "^1.0.2",
+    "on-finished": "^2.4.1",
+    "parseurl": "^1.3.3",
+    "p-cancelable": "^1.1.0",
+    "path-to-regexp": "^0.1.7",
+    "once": "^1.4.0",
+    "pify": "^3.0.0",
+    "package-json": "^6.5.0",
+    "pluralize": "^8.0.0",
+    "pump": "^3.0.0",
+    "please-upgrade-node": "^3.2.0",
+    "proxy-addr": "^2.0.7",
+    "pupa": "^2.1.1",
+    "prepend-http": "^2.0.0",
+    "rc": "^1.2.8",
+    "qs": "^6.11.0",
+    "raw-body": "^2.5.1",
+    "range-parser": "^1.2.1",
+    "registry-auth-token": "^4.2.2",
+    "require-directory": "^2.1.1",
+    "safe-buffer": "^5.1.2",
+    "responselike": "^1.0.2",
+    "registry-url": "^5.1.0",
+    "semver": "^7.3.8",
+    "safer-buffer": "^2.1.2",
+    "semver-compare": "^1.0.0",
+    "semver-diff": "^3.1.1",
+    "serve-static": "^1.15.0",
+    "setprototypeof": "^1.2.0",
+    "send": "^0.18.0",
+    "server-destroy": "^1.0.1",
+    "signal-exit": "^3.0.7",
+    "statuses": "^2.0.1",
+    "side-channel": "^1.0.4",
+    "strip-ansi": "^6.0.1",
+    "string-width": "^4.2.3",
+    "strip-json-comments": "^2.0.1",
+    "steno": "^0.4.4",
+    "toidentifier": "^1.0.1",
+    "to-readable-stream": "^1.0.0",
+    "supports-color": "^7.2.0",
+    "type-is": "^1.6.18",
+    "type-fest": "^0.20.2",
+    "typedarray-to-buffer": "^3.1.5",
+    "unpipe": "^1.0.0",
+    "url-parse-lax": "^3.0.0",
+    "unique-string": "^2.0.0",
+    "vary": "^1.1.2",
+    "update-notifier": "^5.1.0",
+    "widest-line": "^3.1.0",
+    "wrappy": "^1.0.2",
+    "utils-merge": "^1.0.1",
+    "wrap-ansi": "^7.0.0",
+    "y18n": "^5.0.8",
+    "yallist": "^4.0.0",
+    "write-file-atomic": "^3.0.3",
+    "yargs": "^17.6.0",
+    "xdg-basedir": "^4.0.0",
+    "yargs-parser": "^21.1.1"
+  },
+  "description": ""
 }
