--- a/create_tabs/Food-dist/package.json
+++ b/create_tabs/Food-dist/package.json
@@ -7,12 +7,20 @@
   },
   "author": "",
   "license": "ISC",
+  "browserslists": [
+    "> 1%"
+  ],
   "devDependencies": {
+    "@babel/cli": "^7.19.3",
+    "@babel/core": "^7.19.3",
+    "@babel/preset-env": "^7.19.4",
+    "babel-loader": "^8.2.5",
     "json-server": "^0.17.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
     "accepts": "^1.3.8",
     "ansi-align": "^3.0.1",
     "ansi-regex": "^5.0.1",
@@ -40,6 +48,7 @@
     "content-type": "^1.0.4",
     "cookie": "^0.5.0",
     "cookie-signature": "^1.0.6",
+    "core-js": "^3.25.5",
     "cors": "^2.8.5",
     "crypto-random-string": "^2.0.0",
     "debug": "^2.6.9",
